--- a/templates/src/styles/no-idea.scss
+++ b/templates/src/styles/no-idea.scss
@@ -2,227 +2,227 @@
 The following is css/scss that I pulled out of the original templates
 For instance, MS had a bunch of with media queries like @media screen and (max-width: 100%) which doesn't actually do anything?
 */
-
-@media screen and (max-width: 100%) {
-  .row .panel-default .panel-body {
-    margin-top: 40px;
-
-    .branding {
-      img {
-        display: block;
-        height: 80px;
-        width: auto;
-        margin: 0 auto;
-      }
-
-      h1 {
-        display: none;
-      }
-    }
-
-    h3 {
-      font-size: 1.5em;
-      margin-top: 15px;
-    }
-  }
-
-  #attributeVerification {
-    #attributeList {
-      ul li {
-        input {
-          width: 60%;
-          height: 40px;
-          border-radius: 0.5rem;
-          border: 1px solid #605e5c;
-          text-indent: 10px;
-
-          &::-webkit-input-placeholder {
-            text-indent: 10px;
-          }
-        }
-
-        #email {
-          width: 65%;
-          float: left;
-          position: relative;
-          z-index: 2;
-        }
-
-        #email_ver_but_verify {
-          background: 0 0;
-          border: 0;
-          color: #496ad8;
-          position: relative;
-          right: 0;
-          top: 60px;
-          font-size: 1.1em;
-          width: auto;
-          z-index: 1;
-          height: 20px;
-        }
-
-        #email_ver_input {
-          min-width: 50%;
-          width: 60%;
-          float: left;
-        }
-
-        #email_ver_but_resend {
-          top: 10px;
-          font-size: 1.1em;
-          height: 20px;
-        }
-
-        .attrEntry {
-          #email {
-            height: 40px;
-          }
-
-          .verify {
-            #email_ver_but_send {
-              &:after {
-                content: " Verify";
-                font-size: 1.1em;
-                font-weight: bold;
-                margin-left: 40%;
-              }
-
-              height: 40px;
-              width: auto;
-              float: right;
-              overflow: hidden;
-              text-indent: -200px;
-            }
-
-            #email_ver_but_edit {
-              margin-bottom: 15px;
-              border: none;
-              color: #fff;
-              background-color: #496ad8;
-              border-radius: 0.5rem;
-              font-size: 1em;
-              box-shadow: 0 0 40px 2px #dae1f7;
-              width: 30%;
-              height: 40px;
-              overflow: hidden;
-              padding-top: 6px;
-              margin-left: 40%;
-            }
-
-            &:after {
-              content: " ";
-              display: block;
-              clear: both;
-            }
-          }
-        }
-      }
-
-      #verifying_blurb {
-        margin-top: 15px;
-      }
-    }
-
-    .buttons {
-      #continue {
-        height: 40px;
-      }
-
-      #cancel {
-        font-size: 1em;
-        left: 40%;
-      }
-    }
-  }
-}
-
-
-@media (max-width: 100%) {
-  .unified_container .row .panel-default {
-    margin-top: auto;
-    margin-bottom: auto;
-    height: 550px;
-
-    .panel-body {
-      padding: 5rem 3rem;
-      margin-top: 20px;
-
-      .companyName {
-        display: none;
-      }
-
-      .companyLogo, h3 {
-        display: block;
-      }
-
-      #api {
-        width: auto;
-
-        .social {
-          top: 370px;
-          width: auto;
-
-          .options {
-            .accountButton {
-              height: 40px;
-            }
-
-            #FacebookExchange {
-              background-size: 12px;
-              background-position: 50% 75%;
-              margin-bottom: 10px;
-            }
-
-            #GoogleExchange {
-              background-size: 20px;
-              background-position: 50% 75%;
-              margin-bottom: 10px;
-            }
-
-            #TwitterExchange {
-              background-size: 20px;
-              background-position-x: 56px;
-              background-position-y: 14px;
-              margin-bottom: 10px;
-            }
-          }
-        }
-
-        .localAccount {
-          top: 20px;
-
-          .entry {
-            .entry-item {
-              display: block;
-              width: 100%;
-              margin-bottom: 10px;
-
-              .password-label {
-                top: 145px;
-              }
-
-              #logonIdentifier, #password {
-                height: 40px;
-              }
-
-              &:nth-child(2) {
-                width: auto;
-                float: left;
-              }
-            }
-
-            .buttons #next {
-              width: auto;
-              text-indent: -4px;
-              height: 40px;
-              line-height: 0;
-              position: relative;
-              bottom: 5px;
-              left: 8px;
-            }
-          }
-        }
-      }
-    }
-  }
-}
+//
+//@media screen and (max-width: 100%) {
+//  .row .panel-default .panel-body {
+//    margin-top: 40px;
+//
+//    .branding {
+//      img {
+//        display: block;
+//        height: 80px;
+//        width: auto;
+//        margin: 0 auto;
+//      }
+//
+//      h1 {
+//        display: none;
+//      }
+//    }
+//
+//    h3 {
+//      font-size: 1.5em;
+//      margin-top: 15px;
+//    }
+//  }
+//
+//  #attributeVerification {
+//    #attributeList {
+//      ul li {
+//        input {
+//          width: 60%;
+//          height: 40px;
+//          border-radius: 0.5rem;
+//          border: 1px solid #605e5c;
+//          text-indent: 10px;
+//
+//          &::-webkit-input-placeholder {
+//            text-indent: 10px;
+//          }
+//        }
+//
+//        #email {
+//          width: 65%;
+//          float: left;
+//          position: relative;
+//          z-index: 2;
+//        }
+//
+//        #email_ver_but_verify {
+//          background: 0 0;
+//          border: 0;
+//          color: #496ad8;
+//          position: relative;
+//          right: 0;
+//          top: 60px;
+//          font-size: 1.1em;
+//          width: auto;
+//          z-index: 1;
+//          height: 20px;
+//        }
+//
+//        #email_ver_input {
+//          min-width: 50%;
+//          width: 60%;
+//          float: left;
+//        }
+//
+//        #email_ver_but_resend {
+//          top: 10px;
+//          font-size: 1.1em;
+//          height: 20px;
+//        }
+//
+//        .attrEntry {
+//          #email {
+//            height: 40px;
+//          }
+//
+//          .verify {
+//            #email_ver_but_send {
+//              &:after {
+//                content: " Verify";
+//                font-size: 1.1em;
+//                font-weight: bold;
+//                margin-left: 40%;
+//              }
+//
+//              height: 40px;
+//              width: auto;
+//              float: right;
+//              overflow: hidden;
+//              text-indent: -200px;
+//            }
+//
+//            #email_ver_but_edit {
+//              margin-bottom: 15px;
+//              border: none;
+//              color: #fff;
+//              background-color: #496ad8;
+//              border-radius: 0.5rem;
+//              font-size: 1em;
+//              box-shadow: 0 0 40px 2px #dae1f7;
+//              width: 30%;
+//              height: 40px;
+//              overflow: hidden;
+//              padding-top: 6px;
+//              margin-left: 40%;
+//            }
+//
+//            &:after {
+//              content: " ";
+//              display: block;
+//              clear: both;
+//            }
+//          }
+//        }
+//      }
+//
+//      #verifying_blurb {
+//        margin-top: 15px;
+//      }
+//    }
+//
+//    .buttons {
+//      #continue {
+//        height: 40px;
+//      }
+//
+//      #cancel {
+//        font-size: 1em;
+//        left: 40%;
+//      }
+//    }
+//  }
+//}
+//
+//
+//@media (max-width: 100%) {
+//  .unified_container .row .panel-default {
+//    margin-top: auto;
+//    margin-bottom: auto;
+//    height: 550px;
+//
+//    .panel-body {
+//      padding: 5rem 3rem;
+//      margin-top: 20px;
+//
+//      .companyName {
+//        display: none;
+//      }
+//
+//      .companyLogo, h3 {
+//        display: block;
+//      }
+//
+//      #api {
+//        width: auto;
+//
+//        .social {
+//          top: 370px;
+//          width: auto;
+//
+//          .options {
+//            .accountButton {
+//              height: 40px;
+//            }
+//
+//            #FacebookExchange {
+//              background-size: 12px;
+//              background-position: 50% 75%;
+//              margin-bottom: 10px;
+//            }
+//
+//            #GoogleExchange {
+//              background-size: 20px;
+//              background-position: 50% 75%;
+//              margin-bottom: 10px;
+//            }
+//
+//            #TwitterExchange {
+//              background-size: 20px;
+//              background-position-x: 56px;
+//              background-position-y: 14px;
+//              margin-bottom: 10px;
+//            }
+//          }
+//        }
+//
+//        .localAccount {
+//          top: 20px;
+//
+//          .entry {
+//            .entry-item {
+//              display: block;
+//              width: 100%;
+//              margin-bottom: 10px;
+//
+//              .password-label {
+//                top: 145px;
+//              }
+//
+//              #logonIdentifier, #password {
+//                height: 40px;
+//              }
+//
+//              &:nth-child(2) {
+//                width: auto;
+//                float: left;
+//              }
+//            }
+//
+//            .buttons #next {
+//              width: auto;
+//              text-indent: -4px;
+//              height: 40px;
+//              line-height: 0;
+//              position: relative;
+//              bottom: 5px;
+//              left: 8px;
+//            }
+//          }
+//        }
+//      }
+//    }
+//  }
+//}
