--- a/templates/src/styles/_unified.scss
+++ b/templates/src/styles/_unified.scss
@@ -1,39 +1,39 @@
 .unified_container .row .panel-default {
-  padding: 40px 30px;
-  margin-top: auto;
-  margin-bottom: auto;
-  //height: 100%;
-  background-color: #fff;
-
-  .panel-body {
-    max-width: 380px;
-    width: auto;
-    margin: 0 auto;
-    //padding: 0;
-    //padding: 3rem 1rem; //idp
-
-    .companyName {
-      font-size: 1.5em;
-      margin-bottom: 45px;
-    }
-
-    .companyLogo {
-      display: block;
-    }
-
-    img {
-      max-width: 100%;
-      width: auto;
-      height: 70px;
-      margin: 0 auto;
-      display: block;
-    }
-
-    h3 {
-      font-size: 1.5em;
-      display: none;
-    }
-  }
+  //padding: 40px 30px;
+  //margin-top: auto;
+  //margin-bottom: auto;
+  ////height: 100%;
+  //background-color: #fff;
+  //
+  //.panel-body {
+  //  max-width: 380px;
+  //  width: auto;
+  //  margin: 0 auto;
+  //  //padding: 0;
+  //  //padding: 3rem 1rem; //idp
+  //
+  //  .companyName {
+  //    font-size: 1.5em;
+  //    margin-bottom: 45px;
+  //  }
+  //
+  //  .companyLogo {
+  //    display: block;
+  //  }
+  //
+  //  img {
+  //    max-width: 100%;
+  //    width: auto;
+  //    height: 70px;
+  //    margin: 0 auto;
+  //    display: block;
+  //  }
+  //
+  //  h3 {
+  //    font-size: 1.5em;
+  //    display: none;
+  //  }
+  //}
 
   #api {
     .divider {
