--- a/templates/src/styles/selfAsserted.scss
+++ b/templates/src/styles/selfAsserted.scss
@@ -1,33 +1,5 @@
 .self_asserted_container .row .panel-default {
-  padding: 40px 30px;
-  margin: auto;
-  height: 100%;
-  background-color: #fff;
-
   .panel-body {
-    margin: 0 auto;
-    max-width: 380px;
-    width: auto;
-    padding: 0;
-
-    img.companyLogo {
-      display: block;
-      margin: auto;
-      height: 70px;
-    }
-
-    .branding h1 {
-      font-size: 1.5em;
-      color: #505050;
-    }
-
-    h3 {
-      font-size: 1.5em;
-      color: #505050;
-      margin-top: 5px;
-      margin-bottom: 30px;
-    }
-
     .intro {
       display: none;
       text-align: left;
@@ -41,6 +13,176 @@
       }
 
       #attributeVerification {
+        #attributeList ul {
+          display: flex;
+          flex-direction: column;
+
+          li {
+            input {
+              width: 100%;
+
+              &:invalid {
+                outline: unset;
+              }
+
+              &[type="checkbox"], &[type="radio"] {
+                width: 24px !important;
+                box-shadow: none;
+                height: 24px;
+                display: inline-block;
+                float: left;
+                clear: left;
+                margin: 0.5rem;
+              }
+
+              &[type="checkbox"].invalid {
+                border: none;
+              }
+
+              input[type="checkbox"] {
+                + label {
+                  float: left;
+                  display: inline-block !important;
+                  margin: 0.8rem 0 0 0.8rem;
+                  font-weight: 400;
+                }
+
+                border: none;
+                position: relative;
+                width: 24px;
+                height: 24px;
+                font-size: 20px;
+                margin: 0;
+                display: inline-block;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
+                outline: 0;
+                text-indent: 0;
+
+                &:focus {
+                  box-shadow: 0 0 0 2px #000;
+                  border-radius: 0.2rem;
+                }
+
+                &:after {
+                  content: "";
+                  position: absolute;
+                  display: block;
+                  z-index: 1;
+                  width: 24px;
+                  height: 24px;
+                  border: 1px solid #605e5c;
+                  border-radius: 2px;
+                }
+
+                &:before {
+                  background-size: 10px 8px;
+                  background: #00f no-repeat 3px 4px;
+                  position: absolute;
+                  left: 2px;
+                  z-index: 2;
+                  opacity: 0;
+                  width: 100%;
+                  height: 100%;
+                  color: #f6ac4f;
+                }
+
+                &:checked:after {
+                  content: "\2713";
+                  position: absolute;
+                  box-sizing: border-box;
+                  padding-left: 4px;
+                  line-height: 23px;
+                  color: #fff;
+                  background-color: #296ec6;
+                  top: 0;
+                  opacity: 1;
+                  left: 0;
+                  border: 1px solid #296ec6;
+                  border-radius: 2px;
+                }
+              }
+
+              &[type="radio"] {
+                + label {
+                  float: left;
+                  display: inline-block !important;
+                  margin: 0.5rem;
+                  font-weight: 400;
+                }
+
+                -webkit-appearance: none;
+                appearance: none;
+                width: 20px;
+                height: 20px;
+                border: 1px solid #dedede;
+                border-radius: 50%;
+                background-color: #fff;
+                outline: 0;
+
+                &:focus {
+                  box-shadow: 0 0 0 3px #000;
+                }
+
+                &:checked {
+                  background-color: #296ec6;
+                  border: 1px solid #296ec6;
+                }
+              }
+            }
+
+            .helpText {
+              display: none;
+              color: #a61e0c;
+              text-align: justify;
+            }
+
+            #email_success.verificationSuccessText, #email_info {
+              float: left;
+            }
+
+            .attrEntry {
+              .verificationInfoText {
+                margin-bottom: 5px;
+              }
+
+              select {
+                &:hover {
+                  border-color: #888;
+                }
+
+                option {
+                  font-weight: 400;
+                }
+              }
+
+              .validate {
+                #email_fail_retry {
+                  float: left;
+                }
+
+                #email_fail_server {
+                  float: left;
+                  text-align: left;
+                }
+              }
+            }
+
+            #email_fail_no_retry {
+              float: left;
+            }
+
+            .buttons.verify label {
+              float: left;
+            }
+          }
+        }
+
         .pageLevel {
           color: #b00;
           text-align: left;
@@ -52,218 +194,49 @@
           margin-bottom: 5px;
         }
       }
-    }
-  }
-}
 
-.errorText {
-  border: none;
-  padding: 0;
-  background: 0 0;
-  color: #a61e0c;
-}
-
-#attributeVerification #attributeList ul {
-  display: flex;
-  flex-direction: column;
-
-  li {
-    input {
-      width: 100%;
-
-      &:invalid {
-        outline: unset;
-      }
-
-      &[type="checkbox"], &[type="radio"] {
-        width: 24px !important;
-        box-shadow: none;
-        height: 24px;
-        display: inline-block;
-        float: left;
-        clear: left;
-        margin: 0.5rem;
-      }
-
-      &[type="checkbox"].invalid {
+      .errorText {
         border: none;
+        padding: 0;
+        background: 0 0;
+        color: #a61e0c;
       }
 
-      input[type="checkbox"] {
-        + label {
-          float: left;
-          display: inline-block !important;
-          margin: 0.8rem 0 0 0.8rem;
-          font-weight: 400;
-        }
-
-        border: none;
-        position: relative;
-        width: 24px;
-        height: 24px;
-        font-size: 20px;
-        margin: 0;
-        display: inline-block;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        outline: 0;
-        text-indent: 0;
-
-        &:focus {
-          box-shadow: 0 0 0 2px #000;
-          border-radius: 0.2rem;
-        }
-
-        &:after {
-          content: "";
-          position: absolute;
-          display: block;
-          z-index: 1;
-          width: 24px;
-          height: 24px;
-          border: 1px solid #605e5c;
-          border-radius: 2px;
-        }
-
-        &:before {
-          background-size: 10px 8px;
-          background: #00f no-repeat 3px 4px;
-          position: absolute;
-          left: 2px;
-          z-index: 2;
-          opacity: 0;
+      div {
+        &#email_intro {
           width: 100%;
-          height: 100%;
-          color: #f6ac4f;
-        }
-
-        &:checked:after {
-          content: "\2713";
-          position: absolute;
-          box-sizing: border-box;
-          padding-left: 4px;
-          line-height: 23px;
-          color: #fff;
-          background-color: #296ec6;
-          top: 0;
-          opacity: 1;
-          left: 0;
-          border: 1px solid #296ec6;
-          border-radius: 2px;
-        }
-      }
-
-      &[type="radio"] {
-        + label {
-          float: left;
-          display: inline-block !important;
-          margin: 0.5rem;
-          font-weight: 400;
-        }
-
-        -webkit-appearance: none;
-        appearance: none;
-        width: 20px;
-        height: 20px;
-        border: 1px solid #dedede;
-        border-radius: 50%;
-        background-color: #fff;
-        outline: 0;
-
-        &:focus {
-          box-shadow: 0 0 0 3px #000;
-        }
-
-        &:checked {
-          background-color: #296ec6;
-          border: 1px solid #296ec6;
-        }
-      }
-    }
-
-    .helpText {
-      display: none;
-      color: #a61e0c;
-      text-align: justify;
-    }
-
-    #email_success.verificationSuccessText, #email_info {
-      float: left;
-    }
-
-    .attrEntry {
-      .verificationInfoText {
-        margin-bottom: 5px;
-      }
-
-      select {
-        &:hover {
-          border-color: #888;
-        }
-
-        option {
-          font-weight: 400;
-        }
-      }
-
-      .validate {
-        #email_fail_retry {
-          float: left;
-        }
-
-        #email_fail_server {
           float: left;
           text-align: left;
         }
+
+        &#email_info {
+          text-align: left;
+        }
       }
+
+      .disclaimer-container {
+        text-align: left;
+        font-size: 10px;
+
+        .disclaimer-link {
+          display: block;
+          width: fit-content;
+        }
+      }
+
+      .disclaimer-container-page-level {
+        margin-top: 10px;
+      }
+
+      .qrCodeControlContent img {
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      .qrCodeInfo {
+        text-align: left;
+      }
+
     }
-
-    #email_fail_no_retry {
-      float: left;
-    }
-
-    .buttons.verify label {
-      float: left;
-    }
   }
-}
-
-div {
-  &#email_intro {
-    width: 100%;
-    float: left;
-    text-align: left;
-  }
-
-  &#email_info {
-    text-align: left;
-  }
-}
-
-.disclaimer-container {
-  text-align: left;
-  font-size: 10px;
-
-  .disclaimer-link {
-    display: block;
-    width: fit-content;
-  }
-}
-
-.disclaimer-container-page-level {
-  margin-top: 10px;
-}
-
-.qrCodeControlContent img {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.qrCodeInfo {
-  text-align: left;
 }
