hopefully more flexible

--- a/themes/Bootstrap5/src/styles/main.scss
+++ b/themes/Bootstrap5/src/styles/main.scss
@@ -1,7 +1,7 @@
 $domain: 'http://localhost:62298';
 
 //until bootstrap converts to @use, I think all these have to be @import
-@import "../../../node_modules/bootstrap/scss/bootstrap";
+@import "../../../../node_modules/bootstrap/scss/bootstrap";
 @import 'common';
 @import "unified";
 @import 'exchanges';
