--- a/themes/Bootstrap5/templates/multifactor-1.0.0.html
+++ b/themes/Bootstrap5/templates/multifactor-1.0.0.html
@@ -8,11 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" data-preload="true">
+    <link href="http://localhost:62298/assets/css/style.css" rel="stylesheet">
 </head>
 <body>
 <div id="background_branding_container" data-tenant-branding-background-color="true">
     <img data-tenant-branding-background="true"
-         src="https://login.microsoftonline.com/templates/src/backgrounds/1-1.png" alt="Illustration"/>
+         src="http://localhost:62298/assets/images/1-1.png" alt="Illustration"/>
 </div>
 <div class="container phonefactor_container" role="presentation">
     <div class="row">
@@ -20,7 +21,7 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     <img class="companyLogo" data-tenant-branding-logo="true"
-                         src="https://login.microsoftonline.com/templates/src/images/logo.svg" alt="Company Logo">
+                         src="http://localhost:62298/assets/images/logo.svg" alt="Company Logo">
                     <div id="api" role="main">
                     </div>
                 </div>
