--- a/themes/Bootstrap5/templates/selfAsserted.html
+++ b/themes/Bootstrap5/templates/selfAsserted.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="http://localhost:62298/assets/css/style.css" rel="stylesheet">
 </head>
 <body>
 <div class="container self_asserted_container" role="presentation">
